test/modules/deitz/test_use_error.good
test_use_error.chpl:2: error: Symbol x multiply defined
